demo cleanup